test application navigation

--- a/EFExperimental/appsettings.json
+++ b/EFExperimental/appsettings.json
@@ -4,11 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  {
+  }, 
     "ConnectionStrings": {
-      "ShoShoperDbConnectionString": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TestDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultipleActiveResultSets=true;MultiSubnetFailover=False"
-    }
-  }
+      "devConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=TestDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultipleActiveResultSets=true;MultiSubnetFailover=False"
+    } ,
   "AllowedHosts": "*"
 }
